# DJ

./: .gitignore  LICENSE  README.md  dj-workspace.code-workspace  main.txt  pyproject.toml  setup.py  test_sistema.py
core/: __init__.py  access_schema.py  dispatcher.py
core/generation/: __init__.py  generator_compuesta.py  generator_simple.py
core/procedures/: __init__.py  mmv.py
core/storage/: __init__.py  guardar_access.py
core/templates/: __init__.py  generar_template.py
core/validation/: __init__.py  validator.py
data/input/: .gitkeep
data/output/: .gitkeep
data/raw/: .gitkeep
data/validados/: .gitkeep
dj/: __init__.py
dj/data/: __init__.py  sii_codes.py  standards.py
dj/generator/: __init__.py  dj_generator.py
dj/storage/: __init__.py  data_declaracion.py  data_generar.py  data_sii.py
dj/utils/: __init__.py  helpers.py
dj/validator/: __init__.py  dj_validator.py
examples/: ejemplo.ipynb  ejemplo_basico.py
interface/: __init__.py  cli.py
tests/: __init__.py  test_storage.py
