[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj"
version = "1.0.0"
description = "Librería Python para manejo de documentos tributarios chilenos"
readme = "README.md"
authors = [
    {name = "Maximiliano Alarcon", email = ""}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sii", "documentos tributarios", "chile", "dte", "facturacion electronica"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "lxml>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/maximiliano-alarcon/dj"
Documentation = "https://dj.readthedocs.io"
Repository = "https://github.com/maximiliano-alarcon/dj.git"
"Bug Tracker" = "https://github.com/maximiliano-alarcon/dj/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dj*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=dj --cov-report=html --cov-report=term-missing"
